Increase padding-right  in form__input--select modifier fix bug with overlapping select option text by traiangle

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -63,7 +63,7 @@
     &--select {
       -webkit-appearance: none;
       appearance: none;
-      padding-right: 1.5em;
+      padding-right: 2em;
       position: relative;
     }
 
